# openGlExamples

./: .gitmodules  CMakeLists.txt  readme.txt
include/: glad.h
src/: glad.c  main.cpp
